--- a/Localization/es_ES.xaml
+++ b/Localization/es_ES.xaml
@@ -19,6 +19,7 @@
     <sys:String x:Key="LOCSucessStoryEnableOrigin">Habilitar logros de Origin</sys:String>
 
     <sys:String x:Key="LOCSucessStoryRefreshData">Actualizar datos</sys:String>
+    <sys:String x:Key="LOCSucessStoryRefreshAllDataRecent">Refresh all recent achievements data</sys:String>
     <sys:String x:Key="LOCSucessStoryRefreshAllData">Actualizar todos los datos de logros</sys:String>
 
     <sys:String x:Key="LOCSucessStoryRefreshDataMessage">La base de datos de logros se ha restablecido.</sys:String>
