--- a/Localization/uk_UA.xaml
+++ b/Localization/uk_UA.xaml
@@ -11,6 +11,11 @@
     <sys:String x:Key="LOCLanguageCountry">UK</sys:String>
 
     <!--  
+    MainView
+    -->
+    <sys:String x:Key="LOCSucessStoryAchievements">Achievements</sys:String>
+
+    <!--  
     SuccessStorySettingsView
     -->
 
