--- a/Localization/nl_NL.xaml
+++ b/Localization/nl_NL.xaml
@@ -11,6 +11,11 @@
     <sys:String x:Key="LOCLanguageCountry">NL</sys:String>
 
     <!--  
+    MainView
+    -->
+    <sys:String x:Key="LOCSucessStoryAchievements">Achievements</sys:String>
+
+    <!--  
     SuccessStorySettingsView
     -->
 
