--- a/Localization/ja_JP.xaml
+++ b/Localization/ja_JP.xaml
@@ -40,5 +40,6 @@
     <sys:String x:Key="LOCSucessStorylvGamesSourceName">Source</sys:String>
     <sys:String x:Key="LOCSucessStorylvGamesProgression">Progression</sys:String>
 
+    <sys:String x:Key="LOCSucessStoryGraphicTitleALL">All achievements unlocked by month</sys:String>
     <sys:String x:Key="LOCSucessStoryGraphicTitle">Achievements unllock by month</sys:String>
 </ResourceDictionary>
