--- a/Localization/zh_CN.xaml
+++ b/Localization/zh_CN.xaml
@@ -45,5 +45,6 @@
     <sys:String x:Key="LOCSucessStorylvGamesSourceName">Source</sys:String>
     <sys:String x:Key="LOCSucessStorylvGamesProgression">Progression</sys:String>
 
+    <sys:String x:Key="LOCSucessStoryGraphicTitleALL">All achievements unlocked by month</sys:String>
     <sys:String x:Key="LOCSucessStoryGraphicTitle">Achievements unllock by month</sys:String>
 </ResourceDictionary>
