--- a/Views/Interface/SuccessStoryAchievementsGraphics.xaml
+++ b/Views/Interface/SuccessStoryAchievementsGraphics.xaml
@@ -5,25 +5,26 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SuccessStory.Views.Interface"
              xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
+             xmlns:localLVC="clr-namespace:PluginCommon.LiveChartsCommon;assembly=PluginCommon"
              mc:Ignorable="d">
-
-    <!--StackPanel x:Name="sAchievementsGraphics"-->
+ 
+    <!-- TODO https://github.com/Live-Charts/Live-Charts/issues/619 -->
+    <lvc:CartesianChart x:Name="StatsGraphicAchievements" LegendLocation="Bottom" Loaded="StatsGraphicAchievements_Loaded">
+        <lvc:CartesianChart.DataTooltip>
+            <localLVC:CustomersTooltipForSingle />
+        </lvc:CartesianChart.DataTooltip>
         
-        <!-- TODO https://github.com/Live-Charts/Live-Charts/issues/619 -->
-        <lvc:CartesianChart x:Name="StatsGraphicAchievements" LegendLocation="Bottom" Loaded="StatsGraphicAchievements_Loaded">
-            <lvc:CartesianChart.AxisX>
-                <lvc:Axis x:Name="StatsGraphicAchievementsX" MinValue="0" ShowLabels="True">
-                    <lvc:Axis.Separator>
-                        <lvc:Separator Step="1" />
-                    </lvc:Axis.Separator>
-                </lvc:Axis>
-            </lvc:CartesianChart.AxisX>
-            <lvc:CartesianChart.AxisY>
-                <lvc:Axis x:Name="StatsGraphicAchievementsY" ShowLabels="False">
-                </lvc:Axis>
-            </lvc:CartesianChart.AxisY>
-        </lvc:CartesianChart>
-
-    <!--/StackPanel-->
+        <lvc:CartesianChart.AxisX>
+            <lvc:Axis x:Name="StatsGraphicAchievementsX" MinValue="0" ShowLabels="True">
+                <lvc:Axis.Separator>
+                    <lvc:Separator Step="1" />
+                </lvc:Axis.Separator>
+            </lvc:Axis>
+        </lvc:CartesianChart.AxisX>
+        <lvc:CartesianChart.AxisY>
+            <lvc:Axis x:Name="StatsGraphicAchievementsY" ShowLabels="False">
+            </lvc:Axis>
+        </lvc:CartesianChart.AxisY>
+    </lvc:CartesianChart>
 
 </UserControl>
