--- a/Views/SuccessStoryView.xaml
+++ b/Views/SuccessStoryView.xaml
@@ -1,4 +1,5 @@
-﻿<Window x:Class="SuccessStory.SuccessView"
+﻿<controls:WindowBase 
+    xmlns:controls="clr-namespace:Playnite.Controls;assembly=Playnite" x:Class="SuccessStory.SuccessView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,17 +7,20 @@
              xmlns:local="clr-namespace:SuccessStory"
              xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
              mc:Ignorable="d" Height="800" Width="1260" Background="{DynamicResource WindowBackgourndBrush}"
-             ResizeMode="NoResize" Title="Success Story" WindowStartupLocation="CenterScreen">
+             Title="Success Story"              
+             d:DesignStyle="{StaticResource WindowDesignStyle}"
+             Style="{DynamicResource StandardWindowStyle}"
+             ResizeMode="NoResize" WindowStartupLocation="CenterScreen" WindowStyle="None">
 
-    <Window.Resources>
+    <WindowBase.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
-    </Window.Resources>
+    </WindowBase.Resources>
     
     <DockPanel>
         <!--List games with achievements-->
         <DockPanel DockPanel.Dock="Left" Width="687">
             <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Margin="10">
-                <Label Content="{DynamicResource LOCSucessStorySearch}" FontSize="16" Width="100"/>
+                <Label Content="{DynamicResource LOCSucessStorySearch}" FontSize="16" Width="100" Loaded="Label_Loaded"/>
                 <TextBox x:Name="TextboxSearch" TextWrapping="NoWrap" KeyUp="TextboxSearch_KeyUp" Width="567"/>
             </StackPanel>
 
@@ -106,4 +110,4 @@
             </Border>
         </DockPanel>
     </DockPanel>
-</Window>
+</controls:WindowBase>
