--- a/Localization/LocSource.xaml
+++ b/Localization/LocSource.xaml
@@ -1,9 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:sys="clr-namespace:System;assembly=mscorlib">
-    <!--
-    THIS FILE IS NOT PART OF THE THEME, DO NOT MODIFY!
-    -->
 
     <!-- StoreLocalization -->
     <sys:String x:Key="LOCLanguageNameEnglish">english</sys:String>
@@ -24,8 +21,11 @@
     <sys:String x:Key="LOCSucessStoryEnableOrigin">Enable Origin achievements.</sys:String>
 
     <sys:String x:Key="LOCSucessStoryRefreshData">Refresh data</sys:String>
-    <sys:String x:Key="LOCSucessStoryRefreshAllDataRecent">Refresh all recent achievements data</sys:String>
-    <sys:String x:Key="LOCSucessStoryRefreshAllData">Refresh all achievements data</sys:String>
+    <sys:String x:Key="LOCSucessStoryGetMissing">Get missing</sys:String>
+    <sys:String x:Key="LOCSucessStoryGetDataRecent">Get all recent achievements</sys:String>
+    <sys:String x:Key="LOCSucessStoryRefreshAllDataRecent">Refresh all recent achievements</sys:String>
+    <sys:String x:Key="LOCSucessStoryRefreshAllData">Refresh all achievements</sys:String>
+    <sys:String x:Key="LOCSucessStoryGetAllData">Get all missing achievements</sys:String>
 
     <sys:String x:Key="LOCSucessStoryRefreshDataMessage">Achievements database has been reset.</sys:String>
 
@@ -47,4 +47,5 @@
 
     <sys:String x:Key="LOCSucessStoryGraphicTitleALL">All achievements unlocked by month</sys:String>
     <sys:String x:Key="LOCSucessStoryGraphicTitle">Achievements unlocked by month</sys:String>
+    
 </ResourceDictionary>
