--- a/Localization/ru_RU.xaml
+++ b/Localization/ru_RU.xaml
@@ -1,9 +1,6 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:sys="clr-namespace:System;assembly=mscorlib">
-    <!--
-    THIS FILE IS NOT PART OF THE THEME, DO NOT MODIFY!
-    -->
 
     <!-- StoreLocalization -->
     <sys:String x:Key="LOCLanguageNameEnglish">Russian</sys:String>
@@ -24,8 +21,11 @@
     <sys:String x:Key="LOCSucessStoryEnableOrigin">Включить достижения Origin.</sys:String>
 
     <sys:String x:Key="LOCSucessStoryRefreshData">Обновить данные</sys:String>
+    <sys:String x:Key="LOCSucessStoryGetMissing">Get missing</sys:String>
+    <sys:String x:Key="LOCSucessStoryGetDataRecent">Get all recent achievements</sys:String>
     <sys:String x:Key="LOCSucessStoryRefreshAllDataRecent">Обновить все последние достижения</sys:String>
     <sys:String x:Key="LOCSucessStoryRefreshAllData">Обновить все достиженияa</sys:String>
+    <sys:String x:Key="LOCSucessStoryGetAllData">Get all missing achievements</sys:String>
 
     <sys:String x:Key="LOCSucessStoryRefreshDataMessage">База достижений была сброшена.</sys:String>
 
@@ -47,4 +47,5 @@
 
     <sys:String x:Key="LOCSucessStoryGraphicTitleALL">Все достижения разблокированы по месяцам</sys:String>
     <sys:String x:Key="LOCSucessStoryGraphicTitle">Достижения разблокированы по месяцам</sys:String>
+    
 </ResourceDictionary>
