--- a/Localization/es_ES.xaml
+++ b/Localization/es_ES.xaml
@@ -22,10 +22,12 @@
 
     <sys:String x:Key="LOCSucessStoryRefreshData">Actualizar datos</sys:String>
     <sys:String x:Key="LOCSucessStoryGetMissing">Get missing</sys:String>
-    <sys:String x:Key="LOCSucessStoryGetDataRecent">Get all recent achievements</sys:String>
+    <sys:String x:Key="LOCSucessStoryGetDataRecent">Get missing recent achievements</sys:String>
     <sys:String x:Key="LOCSucessStoryRefreshAllDataRecent">Actualizar todos los datos de logros recientes</sys:String>
     <sys:String x:Key="LOCSucessStoryRefreshAllData">Actualizar todos los datos de logros</sys:String>
     <sys:String x:Key="LOCSucessStoryGetAllData">Get all missing achievements</sys:String>
+    <sys:String x:Key="LOCSucessStoryGetDataInstalled">Get missing from installed games</sys:String>
+    <sys:String x:Key="LOCSucessStoryRefreshDataInstalledRecent">Refresh from installed games</sys:String>
 
     <sys:String x:Key="LOCSucessStoryRefreshDataMessage">La base de datos de logros se ha restablecido.</sys:String>
 
