--- a/Localization/ru_RU.xaml
+++ b/Localization/ru_RU.xaml
@@ -22,10 +22,12 @@
 
     <sys:String x:Key="LOCSucessStoryRefreshData">Обновить данные</sys:String>
     <sys:String x:Key="LOCSucessStoryGetMissing">Get missing</sys:String>
-    <sys:String x:Key="LOCSucessStoryGetDataRecent">Get all recent achievements</sys:String>
+    <sys:String x:Key="LOCSucessStoryGetDataRecent">Get missing recent achievements</sys:String>
     <sys:String x:Key="LOCSucessStoryRefreshAllDataRecent">Обновить все последние достижения</sys:String>
     <sys:String x:Key="LOCSucessStoryRefreshAllData">Обновить все достиженияa</sys:String>
     <sys:String x:Key="LOCSucessStoryGetAllData">Get all missing achievements</sys:String>
+    <sys:String x:Key="LOCSucessStoryGetDataInstalled">Get missing from installed games</sys:String>
+    <sys:String x:Key="LOCSucessStoryRefreshDataInstalledRecent">Refresh from installed games</sys:String>
 
     <sys:String x:Key="LOCSucessStoryRefreshDataMessage">База достижений была сброшена.</sys:String>
 
