--- a/Views/SuccessStorySettingsView.xaml
+++ b/Views/SuccessStorySettingsView.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d"
-             d:DesignHeight="400" d:DesignWidth="600">
+             d:DesignHeight="500" d:DesignWidth="630">
 
     <UserControl.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
@@ -13,38 +13,37 @@
     <DockPanel Margin="20" Name="SuccessStorySettings">
         <StackPanel DockPanel.Dock="Top" Height="250">
             <StackPanel Orientation="Horizontal" Margin="0,0,0,15">
-                <CheckBox IsChecked="{Binding enableSteam}" Width="250">
+                <CheckBox IsChecked="{Binding enableSteam}" Width="260">
                     <Label Content="{DynamicResource LOCSucessStoryEnableSteam}"></Label>
                 </CheckBox>
                 <Label x:Name="SteamLoad" Width="90">xxx / xxx</Label>
-                <Button Content="{DynamicResource LOCSucessStoryGetMissing}" Width="105" Margin="0,0,5,0" Click="Button_Click_Get_Steam"></Button>
-                <Button Content="{DynamicResource LOCSucessStoryRefreshData}" Width="105" Click="Button_Click_Steam"></Button>
+                <Button Content="{DynamicResource LOCSucessStoryGetMissing}" Width="110" Margin="0,0,10,0" Click="Button_Click_Get_Steam"></Button>
+                <Button Content="{DynamicResource LOCSucessStoryRefreshData}" Width="110" Click="Button_Click_Steam"></Button>
             </StackPanel>
 
             <StackPanel Orientation="Horizontal" Margin="0,0,0,15">
-                <CheckBox IsChecked="{Binding enableGog}" Width="250">
+                <CheckBox IsChecked="{Binding enableGog}" Width="260">
                     <Label Content="{DynamicResource LOCSucessStoryEnableGog}"></Label>
                 </CheckBox>
                 <Label x:Name="GogLoad" Width="90">xxx / xxx</Label>
-                <Button Content="{DynamicResource LOCSucessStoryGetMissing}" Width="105" Margin="0,0,5,0" Click="Button_Click_Get_Gog"></Button>
-                <Button Content="{DynamicResource LOCSucessStoryRefreshData}" Width="105" Click="Button_Click_Gog"></Button>
+                <Button Content="{DynamicResource LOCSucessStoryGetMissing}" Width="110" Margin="0,0,10,0" Click="Button_Click_Get_Gog"></Button>
+                <Button Content="{DynamicResource LOCSucessStoryRefreshData}" Width="110" Click="Button_Click_Gog"></Button>
             </StackPanel>
 
             <StackPanel Orientation="Horizontal" Margin="0,0,0,15">
-                <CheckBox IsChecked="{Binding enableOrigin}" Width="250">
+                <CheckBox IsChecked="{Binding enableOrigin}" Width="260">
                     <Label Content="{DynamicResource LOCSucessStoryEnableOrigin}"></Label>
                 </CheckBox>
                 <Label x:Name="OriginLoad" Width="90">xxx / xxx</Label>
-                <Button Content="{DynamicResource LOCSucessStoryGetMissing}" Width="105" Margin="0,0,5,0" Click="Button_Click_Get_Origin"></Button>
-                <Button Content="{DynamicResource LOCSucessStoryRefreshData}" Width="105" Click="Button_Click_Origin"></Button>
+                <Button Content="{DynamicResource LOCSucessStoryGetMissing}" Width="110" Margin="0,0,10,0" Click="Button_Click_Get_Origin"></Button>
+                <Button Content="{DynamicResource LOCSucessStoryRefreshData}" Width="110" Click="Button_Click_Origin"></Button>
             </StackPanel>
 
-
             <StackPanel Orientation="Horizontal" Margin="0,0,0,15" Visibility="{Binding enableLocal, Converter={StaticResource BooleanToVisibilityConverter}}">
-                <Label Content="Local Achievements" Width="225" Margin="25,0,0,0"></Label>
+                <Label Content="Local Achievements" Width="235" Margin="25,0,0,0"></Label>
                 <Label x:Name="LocalLoad" Width="90">xxx / xxx</Label>
-                <Button Content="{DynamicResource LOCSucessStoryGetMissing}" Width="105" Margin="0,0,5,0" Click="Button_Click_Get_Local"></Button>
-                <Button Content="{DynamicResource LOCSucessStoryRefreshData}" Width="105" Click="Button_Click_Local"></Button>
+                <Button Content="{DynamicResource LOCSucessStoryGetMissing}" Width="110" Margin="0,0,10,0" Click="Button_Click_Get_Local"></Button>
+                <Button Content="{DynamicResource LOCSucessStoryRefreshData}" Width="110" Click="Button_Click_Local"></Button>
             </StackPanel>
 
             <StackPanel Margin="0,20,0,0">
@@ -55,26 +54,36 @@
         <Grid DockPanel.Dock="Bottom">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="6" />
+                <ColumnDefinition Width="10" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition Height="50" />
-                <RowDefinition Height="50" />
+                <RowDefinition Height="40" />
+                <RowDefinition Height="10" />
+                <RowDefinition Height="40" />
+                <RowDefinition Height="10" />
+                <RowDefinition Height="40" />
             </Grid.RowDefinitions>
 
             <Button Grid.Column="0" Grid.Row="0"
-                Content="{DynamicResource LOCSucessStoryGetDataRecent}" VerticalAlignment="Center" 
-                FontSize="16" Click="Button_Click_Get_Recent" Margin="0,0,0,20"/>
+                Content="{DynamicResource LOCSucessStoryGetDataRecent}" 
+                FontSize="16" Click="Button_Click_Get_Recent"/>
             <Button Grid.Column="2" Grid.Row="0"
-                Content="{DynamicResource LOCSucessStoryRefreshAllDataRecent}" VerticalAlignment="Center" 
-                FontSize="16" Click="Button_Click_All_Recent" Margin="0,0,0,20"/>
+                Content="{DynamicResource LOCSucessStoryRefreshAllDataRecent}" 
+                FontSize="16" Click="Button_Click_All_Recent"/>
 
-            <Button Grid.Column="0" Grid.Row="1"
-                Content="{DynamicResource LOCSucessStoryGetAllData}" VerticalAlignment="Center" 
+            <Button Grid.Column="0" Grid.Row="2"
+                Content="{DynamicResource LOCSucessStoryGetDataInstalled}" 
+                FontSize="16" Click="Button_Click_Get_Installed"/>
+            <Button Grid.Column="2" Grid.Row="2"
+                Content="{DynamicResource LOCSucessStoryRefreshDataInstalledRecent}" 
+                FontSize="16" Click="Button_Click_All_Installed"/>
+            
+            <Button Grid.Column="0" Grid.Row="4"
+                Content="{DynamicResource LOCSucessStoryGetAllData}" 
                 FontSize="16" Click="Button_Click_Get_All" />
-            <Button Grid.Column="2" Grid.Row="1"
-                Content="{DynamicResource LOCSucessStoryRefreshAllData}" VerticalAlignment="Center" 
+            <Button Grid.Column="2" Grid.Row="4"
+                Content="{DynamicResource LOCSucessStoryRefreshAllData}" 
                 FontSize="16" Click="Button_Click_All" />
         </Grid>
     </DockPanel>
